--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/parser": "^7.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "firebase": "^10.12.2",
     "lint-staged": "^15.2.5",
     "next": "14.2.3",
     "react": "^18",
