--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:scss": "sass styles/scss -o styles/css"
   },
   "dependencies": {
+    "@next-auth/firebase-adapter": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "eslint-config-prettier": "^9.1.0",
@@ -21,6 +22,7 @@
     "firebase": "^10.12.2",
     "lint-staged": "^15.2.5",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.4",
