--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nextui-org/tooltip": "^2.0.36",
+    "@next-auth/firebase-adapter": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "eslint-config-prettier": "^9.1.0",
@@ -22,6 +23,7 @@
     "firebase": "^10.12.2",
     "lint-staged": "^15.2.5",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-slideshow-image": "^4.3.1",
