--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.4",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
