--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-slideshow-image": "^4.3.1",
     "sass": "^1.77.4",
-    "scss": "^0.2.4",
-    "swiper": "^11.1.4"
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
