--- a/package.json
+++ b/package.json
@@ -16,19 +16,23 @@
   "dependencies": {
     "@nextui-org/tooltip": "^2.0.36",
     "@auth/firebase-adapter": "^2.4.1",
+    "@hookform/resolvers": "^3.7.0",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
+    "bcryptjs": "^2.4.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "firebase": "^10.12.2",
     "firebase-admin": "^11.11.1",
+    "fs": "^0.0.1-security",
     "lint-staged": "^15.2.5",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
     "react-slideshow-image": "^4.3.1",
-    "react-hook-form": "^7.52.0",
+    "react-hook-form": "^7.52.1",
+    "react-modal": "^3.16.1",
     "sass": "^1.77.4",
     "scss": "^0.2.4",
     "zod": "^3.23.8"
@@ -38,6 +42,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "file-loader": "^6.2.0",
