--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:scss": "sass styles/scss -o styles/css"
   },
   "dependencies": {
+    "@nextui-org/tooltip": "^2.0.36",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "eslint-config-prettier": "^9.1.0",
