--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-modal": "^3.16.1",
+    "react-select": "^5.8.0",
     "sass": "^1.77.4",
     "scss": "^0.2.4",
     "zod": "^3.23.8"
