--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-slideshow-image": "^4.3.1",
     "react-hook-form": "^7.52.1",
     "react-modal": "^3.16.1",
+    "react-select": "^5.8.0",
     "sass": "^1.77.4",
     "scss": "^0.2.4",
     "zod": "^3.23.8"
