--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-slideshow-image": "^4.3.1",
     "sass": "^1.77.4",
     "scss": "^0.2.4",
+    "swiper": "^11.1.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
