--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-tooltip": "^5.27.1",
     "sass": "^1.77.4",
     "scss": "^0.2.4",
+    "swiper": "^11.1.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
