--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "build:scss": "sass styles/scss -o styles/css"
   },
   "dependencies": {
-    "@nextui-org/tooltip": "^2.0.36",
     "@auth/firebase-adapter": "^2.4.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.7.0",
+    "@mui/material": "^5.16.4",
+    "@mui/x-date-pickers": "^7.10.0",
+    "@nextui-org/tooltip": "^2.0.36",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.11",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "firebase": "^10.12.2",
@@ -30,10 +35,10 @@
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-dom": "^18",
-    "react-slideshow-image": "^4.3.1",
     "react-hook-form": "^7.52.1",
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
+    "react-slideshow-image": "^4.3.1",
     "sass": "^1.77.4",
     "scss": "^0.2.4",
     "zod": "^3.23.8"
