--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
     "react-slideshow-image": "^4.3.1",
+    "react-tooltip": "^5.27.1",
     "sass": "^1.77.4",
     "scss": "^0.2.4",
     "swiper": "^11.1.5",
