--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
+    "react-day-picker": "^9.0.4",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-modal": "^3.16.1",
@@ -47,6 +49,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/body-parser": "^1.19.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
