--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,9 @@
       "@/*": ["./src/*"],
       "config/*": ["./src/config/*"],
       "icons/*": ["./src/icons/*"],
-      "firebase/*":["./src/firebase/*"]
-    }
+      "firebase/*": ["./src/firebase/*"]
+    },
+    "typeRoots": ["./node_modules/@types", "./types"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
