--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-modal": "^3.16.1",
+    "react-range": "^1.9.2",
     "react-select": "^5.8.0",
     "react-slideshow-image": "^4.3.1",
     "react-tooltip": "^5.27.1",
