--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
       "@/*": ["./src/*"],
       "config/*": ["./src/config/*"],
       "icons/*": ["./src/icons/*"],
-      "firebase/*":["./src/firebase/*"]
+      "config/firebase/*":["./src/firebase/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
