--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-range": "^1.9.2",
     "react-select": "^5.8.0",
     "react-slideshow-image": "^4.3.1",
+    "react-spinners": "^0.14.1",
     "react-tooltip": "^5.27.1",
     "sass": "^1.77.4",
     "scss": "^0.2.4",
