--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "target": "ES2015",
+    "downlevelIteration": true,
+    "types": ["node"],
     "plugins": [
       {
         "name": "next"
