--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.4.0",
     "dayjs": "^1.11.11",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -33,6 +34,7 @@
     "lint-staged": "^15.2.5",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
+    "next-cloudinary": "^6.10.0",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-day-picker": "^9.0.4",
