--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:scss": "sass styles/scss -o styles/css"
   },
   "dependencies": {
+    "@auth/core": "^0.34.2",
     "@auth/firebase-adapter": "^2.4.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
