Fixed prices, map and url of property page

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.16.4",
     "@mui/x-date-pickers": "^7.10.0",
     "@nextui-org/tooltip": "^2.0.36",
+    "@types/google.maps": "^3.58.1",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "bcryptjs": "^2.4.3",
@@ -32,10 +33,12 @@
     "firebase": "^10.12.2",
     "firebase-admin": "^11.11.1",
     "fs": "^0.0.1-security",
+    "install": "^0.13.0",
     "lint-staged": "^15.2.5",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
     "next-cloudinary": "^6.10.0",
+    "npm": "^10.9.0",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-day-picker": "^9.0.4",
@@ -50,6 +53,7 @@
     "sass": "^1.77.4",
     "scss": "^0.2.4",
     "sharp": "^0.33.5",
+    "slugify": "^1.6.6",
     "swiper": "^11.1.5",
     "zod": "^3.23.8"
   },
