--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/material": "^5.16.4",
     "@mui/x-date-pickers": "^7.10.0",
     "@nextui-org/tooltip": "^2.0.36",
+    "@sendgrid/mail": "^8.1.4",
     "@types/google.maps": "^3.58.1",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
