--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/parser": "^7.12.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.4.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.11",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
