--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:strict": "next lint '*/**/*.{js,jsx,ts,tsx}'",
     "prettier": "prettier --write '*/**/*.{js,jsx,json,ts,tsx,scss,css,md}'",
     "build:scss": "sass styles/scss -o styles/css",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
@@ -32,7 +33,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.11",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.2.1",
     "firebase": "^10.12.2",
     "firebase-admin": "^11.11.1",
     "fs": "^0.0.1-security",
