--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,6 @@
     },
     "typeRoots": ["./node_modules/@types", "./types"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "styles.d.ts"],
   "exclude": ["node_modules"]
 }
