--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "@mui/x-date-pickers": "^7.10.0",
     "@nextui-org/tooltip": "^2.0.36",
     "@sendgrid/mail": "^8.1.4",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/google.maps": "^3.58.1",
+    "@types/jest": "^29.5.14",
+    "@types/node-fetch": "^2.6.12",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "bcryptjs": "^2.4.3",
@@ -38,6 +42,8 @@
     "firebase-admin": "^11.11.1",
     "fs": "^0.0.1-security",
     "install": "^0.13.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.5",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
@@ -63,6 +69,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/body-parser": "^1.19.5",
     "@types/node": "^22.2.0",
     "@types/react": "^18",
@@ -73,6 +80,7 @@
     "file-loader": "^6.2.0",
     "husky": "^9.1.6",
     "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
     "typescript": "^5"
   },
   "lint-staged": {
