--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "incremental": true,
     "target": "ES2015",
     "downlevelIteration": true,
-    "types": ["node"],
+    "types": ["node", "jest"],
     "plugins": [
       {
         "name": "next"
@@ -28,6 +28,13 @@
     },
     "typeRoots": ["./node_modules/@types", "./types"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "styles.d.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "styles.d.ts",
+    "node_modules/@types/jest/index.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
